--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/sixDp"
+        app:layout_constraintBottom_toBottomOf="parent"
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardElevation="@dimen/twoDp"
         card_view:cardUseCompatPadding="true">
@@ -25,13 +26,13 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/google_sans_italic"
+                android:fontFamily="@font/google_sans_bold_italic"
+                android:paddingBottom="8dp"
                 android:text="TextView"
                 android:textSize="@dimen/sixteenSp"
                 app:layout_constraintBottom_toTopOf="@+id/imageView"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:paddingBottom="8dp"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -54,7 +55,8 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/google_sans"
                 android:text="TextView"
-                android:textSize="@dimen/eighteenSp"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/fourteenSp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -63,9 +65,8 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="21dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/google_sans"
                 android:text="TextView"
                 android:textSize="@dimen/fourteenSp"
@@ -74,15 +75,16 @@
 
             <TextView
                 android:id="@+id/source"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
                 android:fontFamily="@font/google_sans"
                 android:text="TextView"
                 android:textSize="@dimen/fourteenSp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/date"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/date" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
